# Lazy-Permission

./: .env.example  .gitignore  Cargo.toml  env.example
src/: main.rs
src/bot/: mod.rs  state.rs
src/cluster/: mod.rs  state.rs
src/config/: discord.rs  log.rs  mod.rs
src/event/: mod.rs
src/interaction/: mod.rs
src/interaction/embed/: error.rs  mod.rs
src/util/: color.rs  itoa.rs  logger.rs  mod.rs  shutdown.rs
