[package]
name = "lazy-permission"
version = "0.1.0"
authors = ["Quaero_et_tego"]
edition = "2021"
description = "LazyPermission Discord Bot"

[dependencies]
dotenv = "0.15.0"
envy = "0.4.2"

futures = "0.3.28"
futures-util = "0.3.28"

once_cell = "1.17.1"

regex = "1.7.3"

serde = "1.0.159"

thiserror = "1.0.40"

tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt-multi-thread", "signal", "time"] }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

twilight-cache-inmemory = { version = "0.15.1", features = ["permission-calculator"]}
twilight-gateway = { version = "0.15.1", default-features = false, features = ["rustls-webpki-roots", "simd-json", "zlib-simd", "twilight-http"] }
twilight-http = { version = "0.15.1", default-features = false, features = ["decompression", "rustls-webpki-roots", "simd-json", "trust-dns"] }
twilight-model = "0.15.1"
twilight-util = { version = "0.15.1", features = ["builder", "permission-calculator"] }


[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.release.package."*"]
codegen-units = 1
strip = true