[package]
name = "lazy-permission"
version = "0.1.0"
authors = ["Quaero_et_tego"]
edition = "2021"
description = "LazyPermission Discord Bot"

[dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"

futures-util = { version = "0.3.28", default-features = false }

serde = "1.0.160"

thiserror = "1.0.40"

tokio = { version = "1.28.0", default-features = false, features = ["macros", "rt-multi-thread", "signal", "time"] }

tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "local-time"] }

twilight-cache-inmemory = { version = "0.15.2", features = ["permission-calculator"]}
twilight-gateway = { version = "0.15.2", default-features = false, features = ["rustls-webpki-roots", "simd-json", "zlib-simd", "twilight-http"] }
twilight-http = { version = "0.15.2", default-features = false, features = ["decompression", "rustls-webpki-roots", "simd-json", "trust-dns"] }
twilight-interactions = "0.15.1"
twilight-model = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder", "permission-calculator"] }


[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.release.package."*"]
codegen-units = 1
strip = true

[profile.release.build-override]
codegen-units = 1
strip = true